# Progetto-PCS-2025

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  main.cpp  main_test.cpp
.github/workflows/: ci.yml
Documentation/: CheckAddEdges.txt  CheckAddVertices.txt  ComputeDistance.txt  CreateAdjacencyList.txt  CreateWeightsMatrix.txt  DualConstructor.txt  FindEdge.txt  FindShortestPath.txt  PolyhedralMesh.txt  TriangulationTypeI.txt  TriangulationTypeII.txt  main.txt
PlatonicSolid/icosahedron/: Cell0Ds.txt  Cell1Ds.txt  Cell2Ds.txt  Cell3Ds.txt
PlatonicSolid/octahedron/: Cell0Ds.txt  Cell1Ds.txt  Cell2Ds.txt  Cell3Ds.txt
PlatonicSolid/tetrahedron/: Cell1Ds.txt
_codeql_build_dir/: Cell0Ds.txt  ProgettoPCS2025  ProgettoPCS2025_TEST
src/: CMakeLists.txt  Dual.cpp  Dual.hpp  Export.cpp  Export.hpp  Import.cpp  Import.hpp  PolyhedralMesh.hpp  ShortPath.cpp  ShortPath.hpp  Triangulation.cpp  Triangulation.hpp
src_test/: CMakeLists.txt  test_build_polyhedra.hpp
